manifests/api/depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers: 
        - name: api-container
          image: khangeshmatte123/api:0.8
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health    # Or use /health if that’s your health endpoint
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
