manifests/api/services.yml
apiVersion: v1
kind: Service 
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000  
  type: ClusterIP
