manifests/api/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-route
spec:
  to:
    kind: Service
    name: api-service
  port:
    targetPort: 80  
  tls:
    termination: edge
